fixed menu alignment to vertical

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,11 @@ html, body {
     width: 300px;
 }
 
+.navbar-expand-lg .navbar-nav {
+    flex-direction: column;
+}
+
+.navbar-expand-lg {
+    flex-wrap: wrap;
+}
+
